# cdm_cnn

./: .gitignore  1.py  README.md  benchmark.py  cached_CDM-CNN_model_10.pt  cdmcnn.py  cdmcnn_model.py  dcraw.sh  do.bat  do.sh  psnr.txt  pyproject.toml  show_requirements.py
