[project]
name = "cdm-cnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "hdf5storage>=0.2.2",
    "numpy>=2.4.2",
    "scikit-image>=0.26.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
